fix: align quick title with icon

--- a/components/views/navigation/sidebar/quick/Quick.less
+++ b/components/views/navigation/sidebar/quick/Quick.less
@@ -1,7 +1,7 @@
 .quick-chat {
   position: absolute;
   width: 288px;
-  top: 0;
+  top: -12px;
   left: calc(100% + 12px);
   padding: 12px;
   display: flex;
